# calculator

./: CMakeLists.txt  Dockerfile-b  Dockerfile-t  Jenkinsfile  anaconda-ks.cfg
src/: CMakeLists.txt
